--- a/styles/navigation.module.css
+++ b/styles/navigation.module.css
@@ -32,7 +32,6 @@
   transition:100ms ease-in-out;
 }
 
-
 .show_board_menu{
   margin-left:16px;
   cursor: pointer;
@@ -69,18 +68,33 @@
   box-shadow: 0px 10px 20px rgba(54, 78, 126, 0.25);
   border-radius: 8px;
   background:white;
+  
 }
-.active_board_menu ul{
- padding:16px;
-}
-.active_board_menu ul > li{
-  margin-bottom: 16px;
-  color:var(--clr-medium-gray);
-  font-size:var(--body-L);
-  font-weight: 500;
-  cursor: pointer;
+
+ 
+ .active_task_menu{
+  position:absolute;
+   bottom:-95px;
+   right:0px;
+  width:190px;
+  height:94px;
+  box-shadow: 0px 10px 20px rgba(54, 78, 126, 0.25);
+  border-radius: 8px;
+  background:white;
+  
  }
- .active_board_menu ul > li:hover{
-   color:var(--clr-red);
+
+ .active_board_menu ul, .active_task_menu ul{
+  padding:16px;
  }
+ .active_board_menu ul > li, .active_task_menu ul > li{
+   margin-bottom: 16px;
+   color:var(--clr-medium-gray);
+   font-size:var(--body-L);
+   font-weight: 500;
+   cursor: pointer;
+  }
+  .active_board_menu ul > li:hover, .active_task_menu ul > li:hover{
+    color:var(--clr-red);
+  }
  
